# cdus

./: .env.example  .gitignore  Cargo.toml  README.md  check_agent.py  index.html  package-lock.json  package.json  reproduce_bug_9.py  run_benchmark.py  sync-ffi.sh  test.rs  test_ipc.py  test_print  test_print.rs  test_resume.py  test_socket.rs  verify_transfer.py  vite.config.ts
agent_data_1/: events.db-shm  events.db-wal  state.db-shm  state.db-wal
agent_data_2/: events.db-shm  events.db-wal  state.db-shm  state.db-wal
agent_data_desktop/: events.db-shm  events.db-wal  state.db-shm  state.db-wal
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/io/cdus/app/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/cdus/app/: CdusApplication.kt  CoreInitializer.kt  MainActivity.kt
android/app/src/main/java/io/cdus/app/data/: DeviceManager.kt  FileTransferManager.kt
android/app/src/main/java/io/cdus/app/service/: CdusNotificationListenerService.kt  FileActionReceiver.kt  FileTransferForegroundService.kt  SyncService.kt  SyncWorker.kt
android/app/src/main/java/io/cdus/app/ui/components/: DevicePickerDialog.kt  SearchBottomSheet.kt
android/app/src/main/java/io/cdus/app/ui/navigation/: Screen.kt
android/app/src/main/java/io/cdus/app/ui/screens/: AuditScreen.kt  ClipboardScreen.kt  DevicesScreen.kt  FilesScreen.kt  OnboardingScreen.kt  SettingsScreen.kt
android/app/src/main/java/io/cdus/app/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/io/cdus/app/utils/: FileUtils.kt  Logger.kt  UIUtils.kt
android/app/src/main/java/uniffi/cdus_ffi/: cdus_ffi.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/io/cdus/app/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
crates/cdus-agent/: Cargo.toml
crates/cdus-agent/src/: file_transfer.rs  integration_tests.rs  lib.rs  libp2p_manager.rs  main.rs  mdns.rs  pairing.rs  relay.rs  turn_manager.rs  utils.rs
crates/cdus-agent/src/store/: mod.rs
crates/cdus-common/: Cargo.toml
crates/cdus-common/src/: lib.rs
crates/cdus-ffi/: Cargo.toml
crates/cdus-ffi/src/: lib.rs
packaging/linux/: cdus-agent.hook  cdus-agent.postinst  post-upgrade.sh
relay/: Dockerfile  README.md  coverage.out  go.mod
relay/cmd/cdus-relay/: main.go
relay/cmd/load-test/: main.go
relay/internal/domain/: models.go
relay/internal/hub/: hub.go  hub_test.go
relay/internal/server/: server.go  server_test.go
relay/internal/store/: sqlite.go  sqlite_test.go  store.go
relay/static/: index.html
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
