[package]
name = "cdus-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
cdus-common = { path = "../cdus-common" }
flume = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
interprocess = "1.2"
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1.5"
arboard = "3.4"
mdns-sd = "0.13"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
gethostname = "0.4"
hex = "0.4"
snow = "0.9"
keyring = "2.3"
anyhow = "1.0"
tungstenite = "0.21"
ureq = { version = "2.9", features = ["json"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3.10"
