[package]
name = "cdus-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "cdus_ffi"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
cdus-common = { path = "../cdus-common" }
cdus-agent = { path = "../cdus-agent" }
tracing = "0.1"
once_cell = "1.19"
flume = "0.11"
libp2p = "0.56.0"
blake3 = "1.8.5"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"
tracing-subscriber = "0.3"

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
